index.css
body {
  width: 100vw;
  display: flex;
  flex-flow: column;
  align-items: center;
  margin: 0;
  overflow-x: hidden;
}

.container {
  width: 1200px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* HEADER SECTION STARTS */
/* HEADER SECTION STARTS */

header {
  height: 86px;
}

.header-logo-text {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 324px;
  height: 68px;
}

.header-logo-text > img {
  height: 100%;
  width: 68px;
}

.header-logo-text > p {
  font-family: "Noto Sans JP", sans-serif;
  font-size: 12px;
  font-weight: 500;
  line-height: 17px;
  margin: 0;
  width: 236px;
}

.header-anchors-holder {
  display: flex;
  justify-content: space-around;
  width: 732px;
}

.header-anchors-holder > a {
  font-family: "Noto Sans JP", sans-serif;
  font-size: 15px;
  line-height: 22px;
  text-decoration: none;
  color: #585858;
}

.langSwitch-and-search-holder {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 102px;
  height: 43px;
}

.dropdown-holder {
  transition: all 0.2s ease-in-out;
  width: 43px;
  height: 43px;
  position: relative;
}

.dropdown-holder a {
  text-decoration: none;
  font-size: 16px;
  color: #0c8b0a;
  line-height: 18px;
  font-family: "Noto Sans JP", sans-serif;
  font-weight: 500;
}

.dropdown-holder li:hover {
  background: #e8f9e8;
}

.lang {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px hidden;
  border-radius: 25px;
  cursor: pointer;
}

.lang:hover {
  background: #e8f9e8;
}

.dropdown {
  position: absolute;
  transition: all 0.2s ease-in-out;
  height: 86px;
  width: 100%;
  margin: 0;
  padding: 0;
  z-index: 10;
  background-color: #fff;
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
}

.dropdown li {
  height: 43px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px hidden;
  border-radius: 25px;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  list-style-type: none;
}

.dropdown-holder.closed .dropdown {
  display: none;
}

.search-img-holder {
  height: 43px;
  width: 43px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px hidden;
  border-radius: 25px;
  cursor: pointer;
}

.search-img-holder:hover {
  background: #e8f9e8;
}

.search-img-holder > img {
  height: 18px;
}

/* MAIN BANNER SECTION STARTS */
/* MAIN BANNER SECTION STARTS */

.banner {
  overflow: hidden;
}

.carousel {
  transform-style: preserve-3d;
  position: relative;
  width: 100%;
  display: flex;
}

.slide {
  width: 100vw;
  height: 43.5vw;
  opacity: 0;
  position: absolute;
  top: 0;
  z-index: 1;
  transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
}

.initial,
.active {
  opacity: 1 !important;
  position: relative;
  z-index: 9 !important;
}

.slide.prev,
.slide.next {
  z-index: 8;
}

.slide.prev {
  transform: translateX(-100%);
}

.slide.next {
  transform: translateX(100%);
}

.arrow-buttons-and-dots-holder {
  position: absolute;
  bottom: 0;
  right: 0;
  display: flex;
  width: 100vw;
  justify-content: center;
  height: 50px;
}

.arrow-buttons-and-dots-holder > div {
  height: 100%;
  position: relative;
  justify-content: center;
}

.dots {
  width: 70px;
  display: flex;
  justify-content: space-between;
  right: 50%;
}

.dot {
  width: 10px;
  height: 10px;
  z-index: 11;
  content: " ";
  background-color: #fff;
  border-radius: 50%;
}

.green {
  background-color: #0c8b0a;
}

.arrow-buttons {
  width: 110px;
  display: flex;
  justify-content: space-between;
  position: absolute;
  right: 0;
}

.carousel__button--prev,
.carousel__button--next {
  width: 50px;
  height: 50px;
  background-color: #fff;
  transform: translateY(-50%);
  border-radius: 50%;
  cursor: pointer;
  z-index: 11;
  border: 1px hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.carousel__button--prev:hover,
.carousel__button--next:hover {
  background-color: #0c8b0a;
}

.carousel__button--prev:hover svg path,
.carousel__button--next:hover svg path {
  stroke: #fff;
}

.carousel__button--prev > svg {
  transform: rotate(180deg);
}

.first-slide-holder {
  width: 100%;
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-image: url(./img/banner.jpg);
  display: flex;
  justify-content: center;
}

.first-slide {
  height: 100%;
  justify-content: flex-start;
  position: relative;
}

.first-slide-text-and-button {
  display: flex;
  flex-flow: column;
  width: 504px;
  height: 280px;
  justify-self: flex-start;
  align-items: flex-start;
}

.first-slide-text-and-button > p {
  margin: 0;
  color: #ffffff;
  font-family: "Noto Sans JP", sans-serif;
}

.first-slide-text-and-button > p:nth-child(1) {
  font-weight: 900;
  font-size: 38px;
  margin-bottom: 18px;
}

.first-slide-text-and-button > p:nth-child(2) {
  font-size: 18px;
  line-height: 23px;
  margin-bottom: 55px;
}

.first-slide-text-and-button > div {
  width: 210px;
  height: 50px;
  background: #0c8b0a;
  border-radius: 54px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.first-slide-text-and-button > div > a {
  text-decoration: none;
  color: #fff;
  font-family: "Noto Sans JP", sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 30px;
  letter-spacing: 0.05em;
}

.second-slide {
  width: 100vw;
  height: 43.5vw;
}

.third-slide {
  width: 100vw;
  height: 43.5vw;
}

/* NEWS SECTION STARTS */
/* NEWS SECTION STARTS */

.news {
  width: 100vw;
  height: 660px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-flow: column;
  margin-top: 70px;
}

.news-section-title {
  height: 50px;
}

.news-section-title > div > p {
  margin: 0;
  font-family: "Noto Sans JP", sans-serif;
  font-weight: bold;
  font-size: 28px;
  line-height: 45px;
  letter-spacing: 0.03em;
  color: #232323;
}

.news-section-title > div > a {
  font-family: "Noto Sans JP", sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #232323;
  text-decoration: none;
}

.news-section-title > div > a::after {
  content: url(./img/small-news-arrow.svg);
  margin-left: 8px;
}

.news-slide {
  height: 520px;
  width: 383px;
  display: flex;
  flex-flow: column;
  background: #ffffff;
  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.12);
  border-radius: 2px;
  margin-right: 25px;
  margin-bottom: 25px;
}

.news-slide > img {
  height: 240px;
}

.news-slide-date-title-text {
  display: flex;
  flex-flow: column;
  align-items: flex-start;
  height: 260px;
}

.news-slide-date-title-text > p {
  font-family: "Noto Sans JP", sans-serif;
}

.news-slide-date-title-text > p:nth-child(1) {
  font-weight: 500;
  font-size: 14px;
  line-height: 18px;
  color: #585858;
  margin: 30px 0 10px 30px;
}

.news-slide-date-title-text > p:nth-child(2) {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  color: #232323;
  margin: 0 30px 10px 30px;
}

.news-slide-date-title-text > p:nth-child(3) {
  font-size: 14px;
  line-height: 22px;
  color: #585858;
  margin: 0 30px 30px 30px;
}

.carousel-holder {
  width: 100vw;
  height: 520px;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

.carousel-holder > div:first-child { 
  overflow: hidden;
  width: 1350px;
  margin-left: 150px;
}

.ncor {
  transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
}

.news-arrow-buttons-holder {
  position: absolute;
  display: flex;
  width: 1350px;
  justify-content: space-between;
  height: 50px;
}

.news-arrow-buttons-holder > div > div {
  transform: translateY(0);
}

.news-slide.prev {
  transform: translateX(-383px);
}

.news-slide.next {
  transform: translateX(383px);
}

@media (max-width: 1440px) {
  .carousel-holder > div:first-child {
    margin-left: 120px;
  }
}

@media (max-width: 1024px) {
  .container {
    width: 850px;
  }
  
  .carousel-holder > div:first-child {
    margin-left: 120px;
  }

  .header-logo-text > img {
    height: 56px;
    width: 56px;
  }

  .header-logo-text {
    width: 253px;
    justify-content: space-between;
  }

  .header-logo-text > p {
    font-size: 10px;
    line-height: 15px;
    width: 185px;
  }
  
  .header-anchors-holder {
    width: 500px;
  }

  .header-anchors-holder > a {
    line-height: 18px;
    font-size: 12px;
  }

  .langSwitch-and-search-holder {
    width: 86px;
  }

  .dropdown-holder {
    width: 40px;
    height: 40px;
  }

  .dropdown {
    height: 80px;
  }

  .dropdown li {
    width: 40px;
  }

  .first-slide-text-and-button > p:nth-child(1) {
    font-size: 35px;
  }

  .first-slide-text-and-button > p:nth-child(2) {
    font-size: 16px;
  }

  .first-slide-text-and-button > div {
    width: 190px;
    height: 40px;
    border-radius: 30px;
  }

  .first-slide-text-and-button > div > a {
    font-size: 14px;
  }

  .carousel__button--prev, .carousel__button--next {
    width: 45px;
    height: 45px;
  }

  .news {
    margin-top: 55px;
    height: 600px;
  }

  .news-section-title > div > p {
    font-size: 26px;
    letter-spacing: 0.01em;
  }

  .carousel-holder > div:first-child {
    margin-left: 90px;
  }

  .carousel-holder > div:first-child {
    width: 940px;
  }

  .news-slide {
    width: 268px;
    height: 420px;
    box-shadow: 0px 7px 30px rgba(0, 0, 0, 0.12);
    margin-right: 25px;
    margin-bottom: 18px;
  }

  .news-slide > img {
    height: 200px;
  }

  .news-slide-date-title-text {
    height: 200px;
  }

  .news-slide-date-title-text > p:nth-child(1) {
    margin: 15px 0 10px 15px;
    font-size: 10px;
    line-height: 15px;
  }

  .news-slide-date-title-text > p:nth-child(2) {
    margin: 0 20px 10px 15px; 
    font-size: 17px;
    line-height: 25px;
  }

  .news-slide-date-title-text > p:nth-child(3) {
    margin: 0 20px 15px 15px;
    font-size: 10px;
    line-height: 18px;
  }

  .news-arrow-buttons-holder {
    width: 940px;
  }
}
/* min-width 765 992 */

